--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-  <body>
+<html lang="en" style="scroll-behavior: smooth;">
+  <body style="background-color: #211f1f; ">
     <div id="root"></div>
   </body>
 </html>
