--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Pridi:wght@600&display=swap" rel="stylesheet">
+</head>
 <html lang="en" style="scroll-behavior: smooth;">
   <body style="background-color: #211f1f; ">
     <div id="root"></div>
