--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Pridi:wght@600&display=swap" rel="stylesheet">
 </head>
 <html lang="en" style="scroll-behavior: smooth;">
-  <body style="background-color: #211f1f; ">
+  <body style="background-color: #211f1f; overflow: hidden;">
     <div id="root"></div>
   </body>
 </html>
